[SR-392][Runtime] Avoid overrelease when failing cast to protocol

Fixes a regression introduced in e09027ca which causes us to release
the wrong value when a cast fails.